client/src/App.css
/* ... */
#lsPlayButton:hover {
    transform: scale(1.05)
}

#lsPlayIcon {
    width: 0;
    height: 0;
    margin: auto;
    margin-left: 40%;
    border-top: 10px solid transparent;
    border-left: 16px solid white;
    border-bottom: 10px solid transparent;
}

#dashGreeting {
    font-size: 22pt;
    font-weight: 600;
    font-family: Arial, sans-serif;
    color: white;
    margin-top: 2.5vh;
    margin-left: 1.75vw;
    cursor: default;
    position: absolute;
}

#gridPanel {
    height: 40vh;
    width: 100%;
    padding-top: 20vh;
    margin-top: -20vh;
    transition: background 0.4s ease-in;
}

#gridPanelLower {
    position: absolute;
    width: 100%;
    height: 40vh;
    padding-top: 20vh;
    margin-top: -20vh;
    background-image: linear-gradient(transparent, #121212 85%)
}


#gridContent {
    position: absolute;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    height: 25vh;
    margin-top: 10vh;
    max-width: 83.25vw;
    margin-left: 1vw;
}


.gridCard {
    width: 19vw;
    height: 11vh;
    background-color:rgb(128, 128, 128, 0.2);
    display: flex;
    align-items: center;
    border-radius: 5px;
    transition: background-color 0.2s ease-in-out;
}

.gridCard:hover .gridPlayButton {
    opacity: 1 !important;
}

.gridPlayButton {
    display: flex;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background: #1ed760;
    box-shadow: 0px 5px 6px 2px rgba(0, 0, 0, 0.4);
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

.gridPlayButton:hover {
    transform: scale(1.05)
}

.gridPlayIcon {
    width: 0;
    height: 0;
    margin: auto;
    margin-left: 40%;
    border-top: 7px solid transparent;
    border-left: 10px solid white;
    border-bottom: 7px solid transparent;
}

.gridCard:hover {
    background-color: rgba(128, 128, 128, 0.7)
}


.gridCardImage {
    background-color: white;
    width: 30%;
    height: 100%;
    float: left;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.gridCardTitle {
    font-family: Verdana, sans-serif;
    color: white;
    width: 45%;
    float: right;
    margin-left: 10px;
    font-size: 10pt;
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: normal; 
    display: -webkit-box !important;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}


body {
    margin: 0px;
    overscroll-behavior-y: none;
    overscroll-behavior-x: none;
    overflow-x: hidden;
}


.button {
    height: auto;
    width: auto;
    font-family: Verdana, sans-serif;
    background-color: #212121;
    color: white;
    text-decoration: none;
    font-size: 16px;
    height: auto;
    padding: 15px 20px;
    border-radius: 5px;
}

.button:hover {
    background: #373737;
}

#collectionPage {
    margin-top: 0;
    margin-left: 15vw;
    width: 85vw;
    padding-top: 18vh;
    display: flex;
    flex-wrap: wrap;
}

.collectionTitle {
    margin-left: 1.75vw;
    color: white;
    position: absolute;
    font-family: Arial, sans-serif;
    top: 12%;
    font-size: 18pt;
}

#collectionList {
    color: white;
    list-style-type: none;
    font-family: Verdana, sans-serif;
    font-size: 10pt;
    position: fixed;
    top: 0;
    left: 24vw;
    z-index: 3;
}

.collectionListItem {
    display: inline-flex;
}

.collectionLink {
    text-decoration: none;
    color: white;
    margin-right: 15px;
    border-radius: 5px;
    width: 90px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.collectionActive {
    background-color: #484848;  
}




.cardBody  {    
    width: 15vw; 
    height: 40vh;
    cursor: default;
    background: #212121;
    border-radius: 5px;
    margin-bottom: 25px;
    transition: background 0.2s ease-in-out;
}

.cardImage {
    height: 63%;
    width: 86%;
    object-fit: cover;
    margin: 15px;
    box-shadow: 0px 4px 10px 2px #121212;
}

.cardImageBox {
    position: relative;
}

.cardPlayButton {
    position: absolute;
    right: 23px;
    bottom: 20px;
    display: flex;
    position: absolute;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background: #1ed760;
    box-shadow: 0px 5px 6px 2px rgba(0, 0, 0, 0.4);
    opacity: 0;
    transition: bottom 0.2s ease-in-out, opacity 0.2s ease-in-out;
}

.cardBody:hover .cardPlayButton {
    bottom: 27px;
    opacity: 1 !important;
}

.cardPlayButton:hover {
    transform: scale(1.05)
}

.cardPlayIcon {
    width: 0;
    height: 0;
    margin: auto;
    margin-left: 40%;
    border-top: 7px solid transparent;
    border-left: 10px solid white;
    border-bottom: 7px solid transparent;
}

.cardPauseIcon {
    width: 4px;
    height: 12px;
    border-right: 3.5px solid white;
    border-left: 3.5px solid white;
    margin: auto;
}

.cardArtist {
    border-radius: 50%;
    height: 190px;
    width: 190px;
    object-fit: cover;
    margin: 15px;
    box-shadow: 0px 0px 10px 2px #121212;
}

.cardTitle {
    display: inline-block;
    font-size: 12pt;
    font-family: Verdana, sans-serif;
    color: white;  
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: nowrap; 
    width: 90%;
}

.cardSub {
    font-size: 10pt;
    font-family: Verdana, sans-serif; 
    color: grey;
    width: 90%;
    
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: normal; 
    display: -webkit-box !important;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.cardPunc {
    font-size: 10pt;
    font-family: Verdana, sans-serif; 
    color: grey;
}

.cardText {
    height: 60px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 15px;
}

.cardSubLink {
    font-size: 10pt;
    font-family: Verdana, sans-serif; 
    color: grey;
    max-width: 190px;
}


.cardSubLink:hover {
    text-decoration: underline;
}

.cardBody:hover {
    background: #373737;
}

.loginPage {
    display: flex;
    text-align: center; 
    justify-content: center; 
    align-items: center; 
    height: 100vh;
}
/* ... */

